# qrare

./: .gitbook-cache.json  .gitignore  LICENSE.md  MANIFEST.in  README.md  binary_qr.py  example.py  example_with_files.py  example_with_string.py  input_test_file.txt  pyproject.toml  qraro.py  requirements.txt  setup.py
binary_qr_converter/: __init__.py  binary_qr.py  converter.py  example.py
examples/: advanced_usage.py  basic_usage.py
scripts/: eget.sh
src/: __init__.py  qrare_cli.py
src/qrare/: __init__.py
src/qrare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qrare/cli/: __init__.py  commands.py  main.py
src/qrare/core/: __init__.py  config.py  converter.py  decoder.py  encoder.py
src/qrare/utils/: __init__.py  exceptions.py  file_ops.py  path_utils.py
